--- a/ai_blogger/templates/login.html
+++ b/ai_blogger/templates/login.html
@@ -14,8 +14,8 @@
             <h1 class="text-3xl font-bold">AI Blog Generator</h1>
         </div>
         <div>
-            <a href="login" class="text-white hover:underline">Login</a>
-            <a href="signup" class="text-white hover:underline">Signup</a>
+            <a href="{% url 'blog_generator:login' %}" class="text-white hover:underline">Login</a>
+            <a href="{% url 'blog_generator:signup' %}" class="text-white hover:underline">Signup</a>
         </div>
     </nav>
 
@@ -24,7 +24,7 @@
         <div class="bg-white p-8 shadow-md rounded-lg max-w-md w-full">
 
             <!-- Login form -->
-            <form class="space-y-4" action="" method="POST">
+            <form class="space-y-4" action="." method="POST">
                 {% csrf_token %}
 
                 {% if error_message %}
