--- a/ai_blogger/templates/all-blogs.html
+++ b/ai_blogger/templates/all-blogs.html
@@ -32,7 +32,7 @@
                 <div class="space-y-4">
                     
                     {% for article in blog_articles reversed %}
-                    <a href="blog-details/{{article.id}}">
+                    <a href="/blog-details/{{article.id}}">
                         <div class="border border-gray-300 p-4 rounded-lg">
                             <h3 class="text-lg font-semibold">{{article.youtube_title}}</h3>
                             <p>{{article.generated_content|truncatechars:80}}</p>
