--- a/ai_blogger/templates/blog-details.html
+++ b/ai_blogger/templates/blog-details.html
@@ -15,8 +15,8 @@
         </div>
         <div>
             <a href="#" class="text-white hover:underline mx-4">Welcome {{ user.username }}</a>
-            <a href="/blog-list" class="text-white hover:underline mx-4">Saved Blog Posts</a>
-            <a href="#" class="text-white hover:underline">Logout</a>
+            <a href="{% url 'blog_generator:blog-list' %}" class="text-white hover:underline mx-4">Saved Blog Posts</a>
+            <a href="{% url 'blog_generator:logout' %}" class="text-white hover:underline">Logout</a>
         </div>
     </nav>
 
