--- a/ai_blogger/templates/blog-details.html
+++ b/ai_blogger/templates/blog-details.html
@@ -11,7 +11,7 @@
     <!-- Navbar -->
     <nav class="bg-blue-600 p-4 text-white flex justify-between">
         <div>
-            <h1 class="text-3xl font-bold">AI Blog Generator</h1>
+            <h1 class="text-3xl font-bold"><a href="{% url 'blog_generator:index' %}">AI Blog Generator</a></h1>
         </div>
         <div>
             <a href="#" class="text-white hover:underline mx-4">Welcome {{ user.username }}</a>
@@ -34,6 +34,8 @@
                     <p class="text-gray-700">{{blog_article_detail.youtube_title}}</p>
                     <h4 class="text-lg font-semibold mt-4">Youtube Link</h4>
                     <a href="{{blog_article_detail.youtube_link}}" class="text-blue-600 hover:underline">{{blog_article_detail.youtube_link}}</a>
+                    <br>
+                    <a href="{% url 'blog_generator:delete' blog_article_detail.id %}" class="inline-block mt-6 py-2 px-4 text-lg font-semibold bg-red-500 hover:bg-red-600 text-white rounded-xl">Delete</a>
                 </div>
             </section>
         </div>
